--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,13 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.github.sendtion:XRichText:1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.nightonke:boommenu:2.1.1'
+
+    compile 'com.zhihu.android:matisse:0.4.3'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+
+    compile 'com.jcodecraeer:xrecyclerview:1.5.9'
 }
