--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.heronote">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".base.BaseApplication"
         android:allowBackup="true"
@@ -21,6 +25,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".EditActivity"></activity>
+
     </application>
 
 </manifest>
