--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity">
+            android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".EditActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.DetailActivity" />
+        <activity android:name=".activity.EditActivity" />
     </application>
 
 </manifest>
