--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
 
     compile 'com.zhihu.android:matisse:0.4.3'
     compile 'io.reactivex:rxjava:1.1.0'
