--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,9 @@ dependencies {
     compile 'com.zhihu.android:matisse:0.4.3'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'com.jcodecraeer:xrecyclerview:1.5.9'
     compile 'com.nightonke:boommenu:2.1.1'
     compile 'com.github.sendtion:XRichText:1.1'
+//    compile 'com.jcodecraeer:xrecyclerview:1.5.9'
 
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
