--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
+    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 
     compile 'com.zhihu.android:matisse:0.4.3'
     compile 'io.reactivex:rxjava:1.1.0'
