--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
 
     compile 'com.zhihu.android:matisse:0.4.3'
     compile 'io.reactivex:rxjava:1.1.0'
